Fixed card titles overflowing

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -21,8 +21,15 @@
     height: 360px;
 }
 
+.social-card .social-card-text {
+    height: initial;
+}
+
 .social-image-card .social-image-card-text {
     height: 1.75em;
+}
+.social-image-card .card-title {
+    display: block;
 }
 
 
